modified html page

--- a/cloudrun/weatherapp/templates/index.html
+++ b/cloudrun/weatherapp/templates/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colorful Weather App</title>
+    <title> Kishalay Weather App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <style>
         body {
-            background-color: rgb(97, 165, 242); /* Light gray background color */
+            background-color: rgb(199, 230, 251); /* Light gray background color */
         }
 
         .container {
-            background-color: #ffffff; /* White container background color */
+            background-color: #cfe0d8; /* White container background color */
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -19,11 +19,11 @@
         }
 
         .navbar {
-            background-color: #007bff; /* Blue Navbar color */
+            background-color: #2eb1dd; /* Blue Navbar color */
         }
 
         .navbar-brand {
-            color: #ffffff; /* White text color for Navbar brand */
+            color: #264bee; /* White text color for Navbar brand */
         }
     </style>
 </head>
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="#">
             <img src="https://storage.googleapis.com/bkt-static-tt/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-             TechTrapture Weather App
+             Kishalay weolcomes you to the Weather App
         </a>
     </nav>
 
