--- a/cloudrun/weatherapp/templates/index.html
+++ b/cloudrun/weatherapp/templates/index.html
@@ -11,7 +11,7 @@
         }
 
         .container {
-            background-color: #cfe0d8; /* White container background color */
+            background-color: #ffffff; /* White container background color */
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,11 +28,12 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">
-            <img src="https://storage.googleapis.com/bkt-static-tt/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-             Kishalay weolcomes you to the Weather App
-        </a>
+    <nav class="navbar navbar-fixed-top navbar-expand-lg text-center navbar-dark bg-primary">
+        
+            <a class="navbar-brand" href="https://www.linkedin.com/in/connect-with-kishalay/">
+                Visit Kishalays Profile
+           </a>
+
     </nav>
 
     <div class="container mt-5">
